force-app/main/default/objects/NS_Partnership__c/NS_Partnership__c.object-meta.xml
<CustomObject>
    <description>It is a Partner object for Account</description>
    <label>Authorized Company</label>
    <nameField>
        <displayFormat>P-{00000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Authorized Companies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>