force-app/main/default/objects/NS_Partnership__c/fields/NS_CustomerAccount__c.field-meta.xml
<CustomField>
    <fullName>NS_CustomerAccount__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>It indicates who is the Customer that is related to this partner</description>
    <inlineHelpText>Who is the Customer that this Partner is related to?</inlineHelpText>
    <label>Customer</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Customer Account can only be of Type Corporate,Service,Business or Offline Customer</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Business, Corporate, Service, Offline Customer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Authorized Companies</relationshipLabel>
    <relationshipName>NS_Partnerships</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>