force-app/main/default/objects/NS_Partnership__c/fields/NS_Email__c.field-meta.xml
<CustomField>
    <fullName>NS_Email__c</fullName>
    <description>Primary Partner Contact&#39;s email id.</description>
    <formula>NS_PrimaryPartnerContact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>