force-app/main/default/objects/NS_Partnership__c/fields/NS_ExternalID__c.field-meta.xml
<CustomField>
    <fullName>NS_ExternalID__c</fullName>
    <description>Concatenation of Partner Account and Customer Account&#39;s External ID</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>