force-app/main/default/objects/NS_Partnership__c/fields/NS_LOAStatus__c.field-meta.xml
<CustomField>
    <fullName>NS_LOAStatus__c</fullName>
    <description>Letter of Authorization status</description>
    <label>LOA Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>