force-app/main/default/objects/NS_Partnership__c/fields/NS_Mobile__c.field-meta.xml
<CustomField>
    <fullName>NS_Mobile__c</fullName>
    <description>Primary Partner Contact&#39;s mobile no.</description>
    <formula>NS_PrimaryPartnerContact__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile</label>
    <type>Text</type>
</CustomField>