force-app/main/default/objects/NS_Partnership__c/fields/NS_PartnershipType__c.field-meta.xml
<CustomField>
    <fullName>NS_PartnershipType__c</fullName>
    <description>It indicates what is the business this partner do with this customer.</description>
    <inlineHelpText>What business does this partner do with this customer?</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3PL</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Other Railroad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>