force-app/main/default/objects/NS_Partnership__c/fields/NS_PrimaryPartnerContact__c.field-meta.xml
<CustomField>
    <fullName>NS_PrimaryPartnerContact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>It indicates the PrimaryContact from the Partner Account for this Customer</description>
    <inlineHelpText>Who is the Primary Contact from the Partner Account for this Customer?</inlineHelpText>
    <label>Primary Contact (Authorized Company)</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Contact must be an Active Contact</errorMessage>
        <filterItems>
            <field>Contact.NS_ContactStatus__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Authorized Companies</relationshipLabel>
    <relationshipName>NS_Partnerships</relationshipName>
    <type>Lookup</type>
</CustomField>