force-app/main/default/objects/NS_Partnership__c/fields/NS_Rating__c.field-meta.xml
<CustomField>
    <fullName>NS_Rating__c</fullName>
    <description>This field indicates if 3PL is authorized to discuss rating information with this customer.</description>
    <inlineHelpText>Is the 3PL authorized to discuss rating information with this customer?</inlineHelpText>
    <label>Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Authorized</fullName>
            </value>
            <value>
                <fullName>Not Authorized</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>