force-app/main/default/objects/NS_Partnership__c/fields/NS_WorkPhone__c.field-meta.xml
<CustomField>
    <fullName>NS_WorkPhone__c</fullName>
    <description>Primary Partner Contact&#39;s phone number</description>
    <formula>NS_PrimaryPartnerContact__r.Phone</formula>
    <label>Work Phone</label>
    <type>Text</type>
</CustomField>